package gov.va.api.health.vistafhirquery.service.controller.witnessprotection;

public interface WitnessProtection {

  String toPrivateId(String publicId);
}
